# cogent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml  rule.md
.github/workflows/: ci.yml
docs/: multi_agent_primitives.md  multi_agent_primitives_v2.md  multi_agent_sequential.md
examples/: cast.py  chat.py  demo_refactor.py  minimal_example.py  multi_agent.py  plan_act.py  react.py  simple.py
src/cogent/: __init__.py  agent.py  model.py
src/cogent/agents/: __init__.py
src/cogent/agents/react/: __init__.py  agent.py  policy.py  protocols.py  result.py  state.py
src/cogent/combinators/: __init__.py  laws.py  ops.py  types.py
src/cogent/core/: __init__.py  agent.py  env.py  evidence.py  memory.py  prompt.py  result.py  tool.py
src/cogent/kernel/: __init__.py  agent.py  env.py  ports.py  prompt.py  result.py  tool.py  trace.py  types.py
src/cogent/model/: __init__.py  blocks.py
src/cogent/multi/: __init__.py  primitives.py
src/cogent/ports/: __init__.py  env.py  model.py
src/cogent/provider/: __init__.py  base.py  models.py
src/cogent/providers/: __init__.py  base.py
src/cogent/runtime/: __init__.py
src/cogent/starter/: __init__.py  evidence.py  formatter.py  protocols.py  react.py
src/cogent/structured/: __init__.py  agent_ext.py  cast.py  errors.py  parser.py  schema.py
tests/: fakes.py  test_agent.py  test_evidence.py  test_memory.py  test_multi.py  test_prompt.py  test_react.py  test_structured.py  test_tool.py
tests/provider/: test_base.py  test_litellm_formatter.py
(+11 files in other folders)
