[project]
name = "cogent"
version = "0.1.0"
description = "Monadic Context Engineering: a Python implementation of AgentMonad and AsyncAgentMonad for agent orchestration."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yifan Zhang" }
]
dependencies = [
  "aioitertools>=0.13.0",
  "docstring-parser>=0.17.0",
  "json-repair>=0.57.1",
  "litellm>=1.81.10",
  "mcp>=1.26.0",
  "numpy>=2.4.2",
  "opentelemetry-api>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "pydantic>=2.7.0",
  "requests>=2.32.5",
  "shortuuid>=1.0.13",
  "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "pyright>=1.1.360",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["cogent"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
